--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
 
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
         <h1><span class="nam"> Imtiaz Azad</span> Universe</h1>
         <h3>Computer Programmer | Web Developer | NGO Professional </h3>
-    
         <p>Working as web developer for 2 years in HTML, CSS, JavaScript, WordPress, SEO. Also, 1 year of job experience in Data processing, spreadsheets and database maintaining, data analyzing, meticulous attention to detail. Maintained thousands of Refugees data and have been certified which you can see in portfolio section. I have been Responsible for Data management which includes timely collection of records, verifying the data, reporting and technical assistance. Pursuing B.Sc. in Information System and completed BBA graduation which developed my knowledge in technology-based subjects and business</p>
-
         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imtiazazad/">Hire Me</a>
         </div>
-    
         <div class="half-width">
             <img src="images/my.png" alt="">
         </div>
