--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Welcome To</h1>
         <h1><span class="nam"> Imtiaz Azad</span> Universe</h1>
         <h3>Computer Programmer | Web Developer | NGO Professional </h3>
-        <p>Working as web developer for 2 years in HTML, CSS, JavaScript, WordPress, SEO. Also, 1 year of job experience in Data processing, spreadsheets and database maintaining, data analyzing, meticulous attention to detail. Maintained thousands of Refugees data and have been certified which you can see in portfolio section. I have been Responsible for Data management which includes timely collection of records, verifying the data, reporting and technical assistance. Pursuing B.Sc. in Information System and completed BBA graduation which developed my knowledge in technology-based subjects and business</p>
+        <p>Working as web developer for 2 years in HTML, CSS, JavaScript, WordPress, SEO. Also, 1 year of job experience in Data processing, spreadsheets and database maintaining, data analyzing, meticulous attention to detail.</p>
         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imtiazazad/">Hire Me</a>
         </div>
         <div class="half-width">
@@ -26,6 +26,18 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web devveloper</h2>
+            <p>Well known of front-end and back-end development. Learnt HTML, CSS, Python, C and Java programming. Currently pursuing B.Sc. in Information System and completed BBA graduation which developed my knowledge in technology-based subjects and business and many more which you will find in my resume.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imtiazazad/">Download resume</a>
+        </div>
+    </section>
     
 </body>
 </html>
