--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     
     <section class="experience-area">
         <h1>Experiences</h1>
-        <div id="full-stack" class="flexible-container ">
-            <div class="experience-item">
+        <div class="flexible-container ">
+            <div id="full-stack"  class="experience-item">
             <h2>Full Stack Developer</h2>
             <h3 class="nam">2022-present | Pro Level Developer </h3>
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
@@ -54,5 +54,9 @@
         </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
+
 </body>
 </html>
