--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
     </section>
     <footer>
-        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+        <p>© Imtiaz Azad 2022, a Programming Hero initiative.</p>
     </footer>
-
+    
 </body>
 </html>
